tdf#108943 RTF import: handle \tx inside a list level definition

\tx in the list level definition has a different meaning (we should map
it to the ListtabStopPosition UNO property), compared to when it's used
as a plain text property.

Change-Id: I7b98ae3d82bbd2c4ad41d0d7f4ad50525c4d0f9a
Reviewed-on: https://gerrit.libreoffice.org/41442
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>